--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
 # This is the main binary. List your C files here.
 add_executable(myproject
     src/blink.c
+    src/blink_helper.c
     )
 
 pico_set_program_name(myproject "test")
