Import updates from the template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,22 +7,32 @@ endif()
 set(sdkVersion 2.0.0)
 set(toolchainVersion 13_2_Rel1)
 set(picotoolVersion 2.0.0)
-if(DEFINED ENV{PICO_SDK_PATH})
+if(EXISTS ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+    include(${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+elseif(DEFINED ENV{PICO_SDK_PATH})
     set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
 else()
-    #include(${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-    set(PICO_SDK_PATH ${USERHOME}/.pico-sdk/sdk/2.0.0)
+    set(PICO_SDK_PATH lib/pico-sdk)
 endif()
+
+if(DEFINED ENV{FREERTOS_PATH})
+    set(FREERTOS_PATH $ENV{FREERTOS_PATH})
+else()
+    set(FREERTOS_PATH lib/freertos)
+endif()
+
+if(DEFINED ENV{UNITY_PATH})
+    set(UNITY_PATH $ENV{UNITY_PATH})
+else()
+    set(UNITY_PATH lib/unity)
+endif()
+
 # ====================================================================================
 cmake_minimum_required(VERSION 3.13)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-if(EXISTS "${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake")
-    include(${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-endif()
 
 # This sets the variant of the board. We are using the pico_w
 set(PICO_BOARD pico_w CACHE STRING "Board type")
@@ -45,42 +55,15 @@ pico_sdk_init()
 # This sets a preprocessor value for use in our code.
 add_compile_definitions(
     configNUMBER_OF_CORES=1
+    PICO_ENTER_USB_BOOT_ON_EXIT=1
     )
 
 # This is where your project header files are located.
 include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
 
-# This is the main binary. List your C files here.
-add_executable(myproject src/blink.c src/blink_helper.c)
-
-pico_set_program_name(myproject "test")
-pico_set_program_version(myproject "0.1")
-
-# Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(myproject 0)
-pico_enable_stdio_usb(myproject 1)
-
-# Add the standard library to the build
-target_link_libraries(myproject PRIVATE
-  pico_stdlib
-  pico_multicore
-  pico_async_context_freertos
-  FreeRTOS-Kernel-Heap4
-)
-
-# The CYW43 is the Wifi/Bluetooth module. If the board is set to pico_w, this
-# variable will be set and the wireless libraries added.
-if(PICO_CYW43_SUPPORTED)
-    # For led support on pico_w
-    target_link_libraries(myproject PRIVATE
-        pico_cyw43_arch_none
-    )
-endif()
-
-# Another pico macro which generates the uf2 file in addition to the elf
-pico_add_extra_outputs(myproject)
-
-include(CTest)
+# The main executable is defined inside the src directory.
+add_subdirectory(src)
 
 # The test configuration is inside the test directory.
+include(CTest)
 add_subdirectory(test)
